adding test for middleware and for one controller